--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
-    },
-    "dependencies": {
+        "@popperjs/core": "^2.10.2",
+        "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
-        "vue": "^3.2.37"
+        "laravel-mix": "^6.0.49",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue": "^2.6.12",
+        "vue-loader": "15.9.8",
+        "vue-template-compiler": "^2.6.12"
     }
 }
