--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "autoprefixer": "10.4.5",
         "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.49",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^2.6.12",
-        "vue-loader": "15.9.8",
-        "vue-template-compiler": "^2.6.12"
+        "vue-loader": "^17.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.2.7",
+        "vue": "^3.2.37"
+    },
+    "resolutions": {
+        "autoprefixer": "10.4.5"
     }
 }
