--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "@popperjs/core": "^2.10.2",
         "autoprefixer": "10.4.5",
         "axios": "^0.27.2",
-        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.49",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
@@ -24,6 +23,7 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
+        "bootstrap": "5.2.0-beta1",
         "vue": "^3.2.37"
     },
     "resolutions": {
