--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "autoprefixer": "10.4.5",
         "axios": "^0.27.2",
         "laravel-mix": "^6.0.49",
+        "postcss-import": "^14.1.0",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
@@ -24,6 +25,7 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "bootstrap": "5.2.0-beta1",
+        "tailwindcss": "^3.1.3",
         "vue": "^3.2.37"
     },
     "resolutions": {
