--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "inertiajs/inertia-laravel": "^0.6.2",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
+        "laravel/scout": "^9.4",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "tightenco/ziggy": "^1.4"
